--- a/blocks/2.main_section-wooder/css/_wooder.css
+++ b/blocks/2.main_section-wooder/css/_wooder.css
@@ -1,30 +1,32 @@
-@font-face {
-  font-family: "ProximaNova";
-  src: url(../fonts/ProximaNova-Bold.ttf);
-}
-
   main .label-wooder {
     height: 859px;
+    background-image: url(../img/wooder.png);
+    background-size: cover;
+    text-transform: uppercase;
+    font-family: ProximaNova;
+    font-weight: bold;
+    padding: 4%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   /* left-slider */
 
   main .left-slider {
-    position: relative;
-    top: 42%;
     transform: rotate(90deg);
-    float: left;
     width: 400px;
     height: 100px;
-    margin-left: 178px;
   }
+
+/* nummbers */
 
   main .left-slider div:nth-child(1) {
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
     float: left;
-    width: 51px;
+    width: 44px;
     height: 4px;
     background-color: #bea67c;
   }
@@ -37,34 +39,37 @@
     margin-left: 17px;
     color: #bea67c;
     font-family: "ProximaNova";
-    font-size: 51px;
+    font-size: 43px;
     letter-spacing: 6px;
   }
 
-  main .left-slider div:nth-child(n + 3) {
+  /* dots */
+
+  main .left-slider a {
+    display: block;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
     float: left;
-    width: 10px;
-    height: 10px;
+    width: 7px;
+    height: 7px;
     margin-left: 76px;
     margin-top: 2px;
     border-radius: 50%;
     background-color: #bea67c;
   }
 
-  main .left-slider div:nth-child(4) {
+  main .left-slider a:nth-child(4) {
     margin-left: 40px;
     background-color: #303030;
   }
 
-  main .left-slider div:nth-child(5) {
+  main .left-slider a:nth-child(5) {
     margin-left: 40px;
     background-color: #303030;
   }
 
-  main .left-slider div:nth-child(6) {
+  main .left-slider a:nth-child(6) {
     margin-left: 40px;
     background-color: #303030;
   }
@@ -72,10 +77,6 @@
   /* middle part */
 
   main .middle {
-    position: relative;
-    top: 28.5%;
-    float: left;
-    margin-left: 128px;
     font-family: 'ProximaNova';
     color: #bea67c;
     font-size: 101px;
@@ -83,22 +84,30 @@
   }
 
   main .learn-more {
-    width: 302px;
+    display: block;
+    width: 253px;
     height: 54px;
     margin-top: 37px;
-    margin-left: 7px;
+    margin-left: 10px;
     border: solid 2px white;
-    color: #ffffff;
-    font-size: 101px;
-    letter-spacing: 20px;
+    stroke: #fff;
   }
+
+  main .learn-more:hover > svg {
+    stroke: #bea67c;
+  }
+
+  main .learn-more:hover {
+    border-color: #bea67c;
+  }
+
 
   main .learn-more div {
     float: left;
-    margin-top: 19px;
-    margin-left: 83px;
-    color: #ffffff;
-    font-size: 15px;
+    margin-top: 22px;
+    margin-left: 61px;
+    color: #fff;
+    font-size: 13px;
     letter-spacing: 2px;
   }
 
@@ -112,35 +121,55 @@
   /* middle part -- scroll down*/
 
   main .scroll-down {
+    display: block;
     width: 8px;
+    margin-top: 68px;
   }
 
   main .scroll-down img {
     float: left;
     margin-left: 6px;
-    margin-top: 66px;
   }
 
   main .scroll-down svg {
     transform: rotate(90deg);
     float: left;
-    margin-top: 29px;
+    margin-top: 34px;
     margin-left: 1px;
-    
+    stroke: #fff;
   }
 
-  main .scroll-down .text {
+  main .scroll-down:hover::after {
+    content: "scroll";
+    text-transform: uppercase;
     transform: rotate(90deg);
     float: left;
     width: 10px;
     margin-left: 11px;
     margin-right: 1px;
-    margin-top: 30px;
-    color: #1f1d1d;
+    margin-top: 27px;
+    color: #fff;
     font-size: 14px;
     letter-spacing: 2px;
-
   }
+
+  main .scroll-down:hover > svg {
+    stroke: #bea67c;
+    color: #fff;
+  }
+
+.label-decor {
+    transform: rotate(90deg);
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 7px;
+    color: #bea67c;
+    margin-top: 135px;
+}
+
+.label-decor p {
+  margin: 0;
+}
 
 @media (min-width: 768px) and (max-width: 1200px) {
 }
