--- a/blocks/2.main_section-wooder/css/_wooder.css
+++ b/blocks/2.main_section-wooder/css/_wooder.css
@@ -174,22 +174,13 @@
 @media (min-width: 768px) and (max-width: 1200px) {
 
   main .label-wooder {
-    height: 859px;
-    background-image: url(../img/wooder.png);
-    background-size: cover;
-    text-transform: uppercase;
-    font-family: ProximaNova;
-    font-weight: bold;
-    padding: 4%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding: 0;
   }
 
   /* left-slider */
 
   main .left-slider {
-    transform: rotate(90deg);
+    transform: rotate(90deg) translate(25%, 0);
     width: 400px;
     height: 100px;
   }
@@ -201,7 +192,7 @@
     top: 50%;
     transform: translate(0, -50%);
     float: left;
-    width: 44px;
+    width: 30px;
     height: 4px;
     background-color: #bea67c;
   }
@@ -214,7 +205,7 @@
     margin-left: 17px;
     color: #bea67c;
     font-family: "ProximaNova";
-    font-size: 43px;
+    font-size: 30px;
     letter-spacing: 6px;
   }
 
@@ -228,24 +219,24 @@
     float: left;
     width: 7px;
     height: 7px;
-    margin-left: 76px;
+    margin-left: 20px;
     margin-top: 2px;
     border-radius: 50%;
     background-color: #bea67c;
   }
 
   main .left-slider a:nth-child(4) {
-    margin-left: 40px;
+    margin-left: 20px;
     background-color: #303030;
   }
 
   main .left-slider a:nth-child(5) {
-    margin-left: 40px;
+    margin-left: 20px;
     background-color: #303030;
   }
 
   main .left-slider a:nth-child(6) {
-    margin-left: 40px;
+    margin-left: 20px;
     background-color: #303030;
   }
 
@@ -254,15 +245,15 @@
   main .middle {
     font-family: 'ProximaNova';
     color: #bea67c;
-    font-size: 101px;
+    font-size: 67px;
     letter-spacing: 20px;
   }
 
   main .learn-more {
     display: block;
-    width: 253px;
-    height: 54px;
-    margin-top: 37px;
+    width: 240px;
+    height: 50px;
+    margin-top: 31px;
     margin-left: 10px;
     border: solid 2px white;
     stroke: #fff;
@@ -279,8 +270,8 @@
 
   main .learn-more div {
     float: left;
-    margin-top: 22px;
-    margin-left: 61px;
+    margin-top: 20px;
+    margin-left: 55px;
     color: #fff;
     font-size: 13px;
     letter-spacing: 2px;
@@ -290,7 +281,7 @@
     float: left;
     display: block;
     margin-left: 12px;
-    margin-top: 19px;
+    margin-top: 18px;
   }
 
   /* middle part -- scroll down*/
