main-decor_tablet

--- a/blocks/3.main_section-decor/css/decor.css
+++ b/blocks/3.main_section-decor/css/decor.css
@@ -231,3 +231,241 @@
   height: 4px;
   background-color: #bea67c;
 }
+
+
+@media (min-width: 768px) and (max-width: 1215px) {
+    .main-content {
+        padding: 10% 10% 0;
+         font-family: ProximaNova;
+      font-weight: bold;
+    }
+    
+    .content-item {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 250px;
+    }
+    
+    .content-item img {
+        width: 57%;
+        height: 71%;
+    }
+    
+    .item-text {
+        width: 412px;
+        align-self: center;
+    }
+    
+    .item-text h3 {
+        text-transform: uppercase;
+        margin: 0;
+        font-size: 43px;
+        width: 308px;
+    }
+    
+    .content-item-2 .item-text h3 {
+        width: 83px;
+        text-align: right;
+    }
+    
+    .item-text p {
+        color: #464646;
+        font-size: 15px;
+        letter-spacing: 1px;
+        margin: 0;
+        width: 308px;
+    }
+    
+    .content-item-2 .item-text p {
+        width: 297px;
+        text-align: left;
+    }
+    
+    .content-item-2 .item-text {
+        margin-left: 70px;
+    }
+    
+    .item-text a {
+        text-decoration: none;
+        color: #000;
+        font-size: 15px;
+        width: 308px;
+        letter-spacing: 2px;
+        margin-left: 104px;
+        display: block;
+    }
+    
+    .item-text svg {
+        margin: 0;
+        margin-left: 5px;
+        float: none;
+        display: inline;
+        vertical-align: middle;
+    }
+    
+    
+    .item-text a:after {
+        content: "";
+        background-color: #bea67c;
+        width: 35px;
+        height: 2px;
+        display: block;
+        margin-top: 5px;
+            
+    }
+    
+    .content-item-2 a {
+        width: 295px;
+        text-align: left; 
+        margin-left: 0px;
+    }
+    
+    .content-item-2 .item-text a:after {
+        margin-left: 0;
+    }
+
+    .content-item-1 .item-text-title {
+            display: flex;
+        align-items: center;
+        
+        
+    }
+    
+    .content-item-1 .item-text-p {
+        display: flex;
+        justify-content: flex-end;
+        margin: 15px 0 20px;
+        
+    }
+    
+    .content-item-1 .item-text-title:before {
+        content: "";
+        width: 83px;
+        height: 1px;
+        background-color: #000;
+        margin-right: 19px;
+        
+    }
+    
+    .content-item-1 .item-text-p:before {
+        content: "";
+        width: 30px;
+        height: 3px;
+        display: block;
+        margin-right: 19px;
+        margin-top: 5px;
+        background-color: #bea67c;
+    }
+    
+    .content-item-2 .item-text-title {
+            display: flex;
+        align-items: center;
+        
+        
+    }
+    
+    .content-item-2 .item-text-p {
+        display: flex;
+        justify-content: flex-start;
+        margin: 15px 0;
+        
+    }
+    
+    .content-item-2 .item-text-title:after {
+        content: "";
+        width: 180px;
+        height: 1px;
+        background-color: #000;
+        margin-left: 80px;
+        
+    }
+    
+    .content-item-2 .item-text-p:after {
+        content: "";
+        width: 30px;
+        height: 3px;
+        display: block;
+        margin-left: 19px;
+        margin-top: 5px;
+        background-color: #bea67c;
+    }
+    
+    .content-number {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        transform: translate(50%, 75%);
+    }
+    
+    .content-number-2 { 
+        left: 100%;
+        transform: translate(-50%, 75%);
+    }
+    
+    .content-number p {
+        text-transform: uppercase;
+        font-size: 35px;
+        font-weight: 800;
+        margin-bottom: 25px;
+    }
+    
+    .content-number p::after {
+        content: ".";
+        color: #bea67c;
+        font-size: 35px;
+        
+    }
+    .content-number div {
+        background-color: #bea67c;
+        width: 3px;
+        height: 39px;
+        margin: 0 auto;
+    }
+    
+    .quality{
+          display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: ProximaNova;
+      font-weight: bold;
+        margin-bottom: 200px;
+    }
+    
+    .quality p:nth-child(1) {
+      margin: 0 0 25px;
+        text-transform: uppercase;
+        font-size: 70px;
+    }
+    
+    .quality p:nth-child(1)::after {
+        content: "";
+        width: 70px;
+        height: 4px;
+        display: block;
+        margin: 18px auto 0;
+        background-color: #bea67c;
+    }
+    
+    .quality p:nth-child(3) {
+        text-align: center;
+        color: #8d8c8c;
+        font-size: 17px;
+        width: 690px;
+        margin: 0;
+    }
+    
+    .quality div:nth-child(1) {
+      position: relative;
+      right: 19px;
+      bottom: 55px;
+      width: 44px;
+      height: 4px;
+      background-color: #bea67c;
+    }
+  
+}
